objects/EUR_CRM_POSM_Order_Item__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Brand_Quality__c</fullName>
        <formula>EUR_CRM_POS_Material__r.EUR_CRM_Brand_Quality__r.Name</formula>
        <label>Brand Quality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand__c</fullName>
        <formula>EUR_CRM_POS_Material__r.EUR_CRM_Brand__r.Name</formula>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Category__c</fullName>
        <formula>EUR_CRM_POS_Material__r.EUR_CRM_Brand__r.EUR_CRM_Category_Name__c</formula>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_POSM_Code__c</fullName>
        <formula>EUR_CRM_POS_Material__r.EUR_CRM_POS_Material_Code__c</formula>
        <label>POSM Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_POSM_Order__c</fullName>
        <label>POSM Order (EU)</label>
        <referenceTo>EUR_CRM_POSM_Order__c</referenceTo>
        <relationshipLabel>POSM Order Items</relationshipLabel>
        <relationshipName>POSM_Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_POS_Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POS Material (EU)</label>
        <referenceTo>EUR_CRM_POS_Material__c</referenceTo>
        <relationshipLabel>POSM Order Items</relationshipLabel>
        <relationshipName>POSM_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>POSM Order Item (EU)</label>
    <nameField>
        <displayFormat>POSOI-{0000000000}</displayFormat>
        <label>POSM Order Item (EU) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POSM Order Items</pluralLabel>
    <recordTypes>
        <fullName>EUR_ZA_POSM_Order_Item</fullName>
        <active>true</active>
        <label>EUR ZA POSM Order Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>